tests/baselines/reference/mergedModuleDeclarationCodeGen.errors.txt
mergedModuleDeclarationCodeGen.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen.ts(2,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen.ts(10,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen.ts(11,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== mergedModuleDeclarationCodeGen.ts (4 errors) ====
    export module X {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module Y {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            class A {
                constructor(Y: any) {
                    new B();
                }
            }
        }
    }
    export module X {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module Y {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export class B {
            }
        }
    }